# jbl-charge5

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: tests.yml  validate.yml
custom_components/jbl_charge5/: __init__.py  binary_sensor.py  bt.py  button.py  commands.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  parser.py  protocol.py  select.py  sensor.py  strings.json  switch.py  tokens.py
custom_components/jbl_charge5/translations/: en.json  pt-BR.json
docs/: PROTOCOL.md  RECON_FINDINGS.md
docs/captures/: gatt_dump.txt  poll_state_idle.txt  poll_state_playing.txt  speaker_info_response.txt
docs/superpowers/plans/: 2026-05-31-jbl-charge5-ha-integration.md  2026-05-31-jbl-charge5-protocol-recon.md
scripts/: poc_battery.py  poll_state.py  scan.py
src/jbl_charge5/: __init__.py  client.py  protocol.py  tokens.py
tests/: test_protocol.py  test_tokens.py
tests/ha/: conftest.py  test_bt.py  test_commands.py  test_config_flow.py  test_parser.py  test_sensor.py
