[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jbl-charge5"
version = "0.0.1"
description = "Reverse-engineered control protocol + client for the JBL Charge 5"
requires-python = ">=3.11"
dependencies = ["bleak>=0.22"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
